Specify the trial name when crashing due to missing default group name.

BUG=716493

Review-Url: https://codereview.chromium.org/2847813004
Cr-Commit-Position: refs/heads/master@{#468112}

Former-commit-id: 8e5e44bc2a23a1599de02595e445257571f4f76f